# ghostty-customs

./: .gitignore  CLAUDE.md
docs/superpowers/plans/: 2026-03-13-worktree-manager.md
docs/superpowers/specs/: 2026-03-13-worktree-manager-design.md
themes/: arcade-neon  avatar-terminal  nes-rpg  nes-rpg-config-example  retro-amber  retro-phosphor
tools/: install-theme.sh  install-zellij-integration.sh
tools/worktree-manager/: package.json
tools/worktree-manager/src/: app.css  app.html
tools/worktree-manager/src-tauri/: Cargo.toml  tauri.conf.json
tools/worktree-manager/src-tauri/capabilities/: default.json
tools/worktree-manager/src-tauri/src/: claude.rs  config.rs  external.rs  hooks_config.rs  hooks_server.rs  lib.rs  main.rs  session_manager.rs  tray.rs  types.rs  watcher.rs  worktree.rs
tools/worktree-manager/src/lib/: types.ts
tools/worktree-manager/src/lib/components/: ActivityLog.svelte  CleanupDialog.svelte  NewWorktreeDialog.svelte  SessionStatus.svelte  WorktreeDetail.svelte  WorktreeList.svelte
tools/worktree-manager/src/lib/stores/: repositories.ts  sessions.ts  worktrees.ts
tools/worktree-manager/src/routes/: +page.svelte
zellij/: README.md  config-snippet.kdl  zshrc-snippet.sh
zellij/layouts/: parallel-claude.kdl  terminal-ide.kdl
